--- a/en/c/cult of personality.856173.wikitext
+++ b/en/c/cult of personality.856173.wikitext
@@ -16,7 +16,7 @@
 * Belarusian: {{t|be|культ асо́бы|m|sc=Cyrl}}
 * Chinese:
 *: Mandarin: {{t+|cmn|個人崇拜|sc=Hani}}, {{t+|cmn|个人崇拜|tr=gèrén chóngbài|sc=Hani}}
-* Danish: {{t|da|personkult|c}}
+* Danish: {{t|da|personkult|c}}, {{t|da|personlighedskult|c}}
 * Estonian: {{t|et|isikukultus}}
 * Finnish: {{t|fi|henkilöpalvonta}}
 * French: {{t+|fr|culte de la personnalité|m}}
