t+kl:[[qeqertaq]] t+ovd:[[ö]] t+se:[[suolu]] ([[WT:EDIT|Assisted]]) <island#49709893>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -113,6 +113,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Dogrib: {{t|dgr|dı}}
 * Dutch: {{t+|nl|eiland|n}}
 * Egyptian: {{t-egy|jw|m|h=N18:N23*Z1}}, {{t-egy|mꜣwt|f|h=mA-A-W:t-N23:Z1}}
+* Elfdalian: {{t|ovd|ö|m}}
 * Emilian: {{t|egl|îsla|f}}
 * Esperanto: {{t+|eo|insulo}}
 * Estonian: {{t+|et|saar}}
@@ -132,6 +133,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 *: Bavarian: {{t|bar|Insl|f}}
 * Greek: {{qualifier|formal}} {{t+|el|νήσος|f}}, {{t+|el|νησί|n}}
 *: Ancient: {{t|grc|νῆσος|f}}
+* Greenlandic: {{t|kl|qeqertaq}}
 * Guaraní: {{t|gn|ypa'ũ}}
 * Gujarati: {{t|gu|દ્વીપ|m}}, {{t+|gu|ટાપુ}}
 * Haitian Creole: {{t|ht|zile}}, {{t|ht|zil}}
@@ -212,6 +214,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 *: Föhr-Amrum: {{t|frr|eilun|n}}
 *: Helgoland: {{t|frr|Ailun|n}}, {{t|frr|Eelun|n}}
 *: Mooring: {{t|frr|ailönj|n}}
+* Northern Sami: {{t|se|suolu}}
 * Northern Sotho: {{t|nso|sehlakehlake}}
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
