--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -8,6 +8,7 @@
 {{en-suffix}}
 
 # A practitioner of a specific type of [[divination]].
+# {{lb|en|fantasy}} A practicioner of a specific type of magic, someone who can control a specific subject through magic
 
 ===Anagrams===
 * {{anagrams|en|Camren|Carmen|carmen}}
