t+ksw:[[ပဒဲ]] t-balance ([[WT:EDIT|Assisted]]) <rabbit#49721340>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -140,8 +140,8 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Lithuanian: {{t+|lt|triušis|m}}
 * Low German:
 *: Low German: {{t|nds-de|Kanink|m|n}}, {{t|nds-de|Kaninken|m|n}}
-{{trans-mid}}
 * Luxembourgish: {{t|lb|Kanéngchen|f}}
+{{trans-mid}}
 * Lü: {{t|khb|ᦂᦎᦻᧈ|sc=Talu}}
 * Macedonian: {{t|mk|заjак|m}}
 * Malay: {{t+|ms|arnab}}, {{t|ms|kelinci}}, {{t|ms|kucing belanda}}, {{t|ms|kuilu}}, {{t|ms|terwelu}}
@@ -177,6 +177,7 @@ From {{etyl|enm|en}} {{m|enm|rabet}}, from {{etyl|frm|en}} dialect (compare {{et
 * Romanian: {{t+|ro|iepure}}, {{t|ro|iepure de vizuină}}
 * Romansch: {{t|rm|cunigl}}
 * Russian: {{t+|ru|кро́лик|m}}, {{t+|ru|крольчи́ха|f}}
+* S'gaw Karen: {{t|ksw|ပဒဲ}}
 * Sanskrit: {{t+|sa|शशक}}
 * Sardinian: {{t|scn|cunillu}}, {{t|scn|cacciappu}}
 * Scots: {{t|sco|kinnen}}
