--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -199,11 +199,11 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Latgalian: {{t|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
-{{trans-mid}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Limburgish: {{t+|li|zwien}}, {{t+|li|verke}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Livonian: {{t|liv|sigā}}
+{{trans-mid}}
 * Low German: {{t+|nds|Swien|n}}
 * Ludian: {{t|lud|šiga}}
 * Luganda: {{t|lg|embizzi}}
@@ -252,6 +252,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Romanian: {{t+|ro|porc|m}}
 * Romansch: {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}, {{t|rm|chucal|m}}
 * Russian: {{t+|ru|свинья́|f}}, {{t+|ru|бо́ров|m}} {{qualifier|boar}}
+* S'gaw Karen: {{t|ksw|ထိး}}
 * Sami:
 *: Inari Sami: {{t|smn|šahe}}
 *: Kildin Sami: {{t|sjd|шагкь}}
