--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -98,7 +98,7 @@ From {{inh|en|enm|rotten}}, {{m|enm|roten}}, from {{inh|en|ang|rotian||to rot, b
 * Turkish: {{t+|tr|çürümek}}
 * Ukrainian: {{t|uk|гни́ти|impf|sc=Cyrl}}
 * Uzbek: {{t+|uz|chirimoq}}
-* Vietnamese: {{t-needed|vi}}
+* Vietnamese: {{t+|vi|rữa}}, {{t+|vi|rã}}
 * Walloon: {{t+|wa|pouri}}
 * Welsh: {{t+|cy|pydru}}, {{t|cy|braenu}}, {{t+|cy|madru}}
 {{trans-bottom}}
