--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -104,6 +104,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 * Portuguese: {{t+|pt|bambu|m}}
 * Romanian: {{t+|ro|bambus|m}}, {{t|ro|bambu|m}}
 * Russian: {{t+|ru|бамбу́к|m}}
+* S'gaw Karen: {{t|ksw|ဝၣ်}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|бамбус|m}}
 *: Roman: {{t+|sh|trskovača|f}}, {{t+|sh|bambus|m}}
