--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -66,7 +66,7 @@ The verb comes from the supposed cunningness of the weasel.
 * Estonian: {{t|et|nirk}}
 * Finnish: {{t+|fi|lumikko}}
 * French: {{t+|fr|belette|f}}, {{t+|fr|belette d'Europe|f}}, {{t+|fr|belette pygmée|f}}, {{t+|fr|petite belette|f}}, {{t+|fr|fouine|f}}
-* Galician: {{t|gl|denosiña|f}}, {{t|gl|doniña|f}}, {{t+|gl|donicela|f}}
+* Galician: {{t|gl|denociña|f}}, {{t|gl|doniña|f}}, {{t+|gl|donicela|f}}
 * Georgian: {{t|ka|თრითინა}}, {{t|ka|სინდიოფალა}}, {{t|ka|დედოფალა}}, {{t|ka|დედოფალა}}
 * German: {{t+|de|Wiesel|n}}, {{t|de|Mauswiesel|n}}, {{t|de|Zwergwiesel|n}}, {{t|de|Kleinwiesel|n}}, {{qualifier|popularly}} {{t|de|Hermännchen|n}}
 * Greek: {{t+|el|νυφίτσα|f}}
