--- a/en/g/genet.746610.wikitext
+++ b/en/g/genet.746610.wikitext
@@ -24,7 +24,7 @@ From {{etyl|xno|en}} {{m|fro|genette}}, {{etyl|frm|en}} {{m|frm|genette}}, {{m|f
 * Basque: {{t|eu|katajineta}}
 * Catalan: {{t+|ca|geneta|f}}
 * Chinese:
-*: Mandarin: {{t+|cmn|獛|tr=[[pú]]|sc=Hani}}
+*: Mandarin: {{t+|cmn|獛|tr=pú}}
 * Dutch: {{t+|nl|genet}}
 * Esperanto: {{t|eo|genoto}}
 * Finnish: {{t+|fi|genetti}}
