--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -24,8 +24,10 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 {{en-verb|blows|blowing|blew|blown}}
 
 # {{lb|en|intransitive}} To produce an [[air]] [[current]].
-#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, sc. 2:
+#* '''1606''', [[w:William Shakespeare|William Shakespeare]], ''King Lear'', act 3, scene 2:
 #*: "'''Blow''', winds, and crack your cheeks! rage! '''blow'''!"
+#* '''1613''', [[w:William Shakespeare|William Shakespeare]], ''The Tempest'', act 1, scene 1:
+#*: "'''Blow''' till thou burst thy wind, if room enow!"
 #* Walton
 #*: Hark how it rains and '''blows'''!
 # {{lb|en|transitive}} To propel by an [[air]] [[current]].
