+rhyme [[Rhymes:Esperanto/eɡa|-eɡa]] <mega#49738567>

--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -90,6 +90,9 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 ===Etymology===
 From {{af|eo|meg|-a}}.
 
+===Pronunciation===
+* {{rhymes|eɡa|lang=eo}}
+
 ===Adjective===
 {{eo-head}}
 
