--- a/en/m/mega.34066.wikitext
+++ b/en/m/mega.34066.wikitext
@@ -91,7 +91,7 @@ From the prefix {{m|en|mega-}}, from {{der|en|grc|μέγας|t=great, large, mig
 From {{af|eo|meg|-a}}.
 
 ===Pronunciation===
-* {{rhymes|eɡa|lang=eo}}
+{{eo-IPA}}
 
 ===Adjective===
 {{eo-head}}
