t+eo:[[kvarangulo]] ([[WT:EDIT|Assisted]]) <quadrilateral#49739535>

--- a/en/q/quadrilateral.4319.wikitext
+++ b/en/q/quadrilateral.4319.wikitext
@@ -35,7 +35,7 @@ From {{der|en|la|quadrilaterus}}, {{m|en|quadri-||four}} + {{cog|la|laterālis||
 * Czech: {{t+|cs|čtyřúhelník|m}}
 * Danish: {{t+|da|firkant|c}}
 * Dutch: {{t+|nl|vierhoek}}
-* Esperanto: {{t|eo|kvarlatero}}
+* Esperanto: {{t|eo|kvarlatero}}, {{t|eo|kvarangulo}}
 * Finnish: {{t+|fi|nelikulmio}}
 * French: {{t+|fr|quadrilatère}}, {{t+|fr|quadrangle|m}}
 * Georgian: {{t|ka|ოთხკუთხედი}}
