--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -71,6 +71,7 @@ Abbreviation of various terms and phrases.
 * Persian: {{t|fa|سی‌دی|tr=sidi|sc=fa-Arab}}
 * Portuguese: {{t+|pt|CD|m}}
 * Russian: {{t+|ru|CD|m}}, {{t|ru|си-ди́|m}}
+* Spanish: {{t+|es|CD|m}}
 * Swedish: {{t+|sv|CD|c}}
 * Thai: {{t|th|ซีดี}}
 * Urdu: {{t|ur|سی ڈی|tr=sīḍī|sc=ur-Arab}}
