--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -67,8 +67,8 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * Japanese: {{t|ja|マーモット|tr=māmotto}}
 * Kazakh: {{t|kk|суыр|sc=Cyrl}}
 * Korean: {{t|ko|마멋}}
-{{trans-mid}}
 * Ladin: {{t|lld|marmota}}
+{{trans-mid}}
 * Latvian: {{t|lv|murkšķis}}
 * Lithuanian: {{t|lt|švilpikas}}
 * Lower Sorbian: {{t|dsb|boback}}
@@ -93,6 +93,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * Slovene: {{t+|sl|svizec|m}}
 * Spanish: {{t|es|marmota|f}}
 * Swedish: {{t|sv|murmeldjur}}
+* Tibetan: {{t|bo|ཕྱི་བ}}
 * Turkish: {{t+|tr|dağ sıçanı}}
 * Ukrainian: {{t+|uk|бабак|tr=babak}}
 * Upper Sorbian: {{t|hsb|bobak}}
