t+nan:[[代誌]] t+nan:[[代志]] ([[WT:EDIT|Assisted]]) <thing#49764998>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -125,6 +125,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Chinese:
 *: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|物|tr=mat6}}, {{t|yue|事物|tr=si6 mat6}}
 *: Mandarin: {{t+|cmn|東西|sc=Hani}}, {{t+|cmn|东西|tr=dōngxi|sc=Hani}}, {{t+|cmn|物|tr=wù|sc=Hani}}, {{t+|cmn|事物|tr=shìwù|sc=Hani}}
+*: Min Nan: {{t+|nan|代誌}}, {{t|nan|代志|tr=tāi-chì}}
 * Coptic:
 *: Bohairic: {{t|cop|ⲉⲛⲭⲁⲓ|m|tr=enxai}}
 *: Sahidic: {{t|cop|ⲉⲛⲕⲁ|m|tr=enka}}
