--- a/en/m/moneylender.720245.wikitext
+++ b/en/m/moneylender.720245.wikitext
@@ -20,6 +20,7 @@
 * Romanian: {{t+|ro|cămătar|m}}, {{t+|ro|uzurar|m}}, {{t|ro|uzurară|f}}
 * Russian: {{t+|ru|ростовщи́к|m}}
 * Spanish: {{t|es|prestamista|m|f}}
+* Tibetan: {{t|bo|དངུལ་བུན་གཏོང་མཁན}}
 {{trans-bottom}}
 
 ====See also====
