--- a/en/p/prisoner of war.4326.wikitext
+++ b/en/p/prisoner of war.4326.wikitext
@@ -17,6 +17,7 @@
 ====Translations====
 {{trans-top|soldier or combatant captured by the enemy}}
 * Arabic: {{t|ar|أَسِير اَلْحَرْب|m}}, {{t|ar|أَسِير|m}}
+* Armenian: {{t+|hy|ռազմագերի}}
 * Chinese:
 *: Mandarin: {{t+|cmn|戰俘|sc=Hani}}, {{t+|cmn|战俘|tr=zhànfú|sc=Hani}}, {{t+|cmn|俘虜|sc=Hani}}, {{t+|cmn|俘虏|tr=fúlǔ|sc=Hani}}
 * Czech: {{t+|cs|zajatec|m}}, {{t|cs|válečný zajatec|m}}
