--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -133,7 +133,7 @@ From {{etyl|enm|en}} {{m|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|a
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Galician: {{t|gl|outra vez}}, {{t|gl|de novo}}
 * Georgian: {{t|ka|ხელახლა}}, {{t|ka|კვლავ}}, {{t|ka|ისევ}}
-* German: {{t+|de|erneut}}, {{t|de|noch einmal}}, {{t+|de|nochmal}}, {{t|de|schon wieder}}, {{t+|de|wieder}}
+* German: {{t+|de|erneut}}, {{t|de|noch einmal}}, {{t+|de|nochmal}}, {{t|de|schon wieder}}, {{t+|de|wieder}}, {{t+|de|wiederum}}
 * Greek: {{t+|el|ξανά}}, {{t+|el|πάλι}}
 *: Ancient: {{t|grc|ἄνωθεν}}
 * Hawaiian: {{t|haw|hou}}
