--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -52,6 +52,7 @@ From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from
 *: Egyptian Arabic: {{t|arz|دقن|tr=daʾn|sc=Arab}}
 * Aragonese: {{t|an|mentón|m}}, {{t|an|barbeta|f}}
 * Armenian: {{t+|hy|կզակ}}
+* Assamese: {{t|as|থুঁতৰি}}
 * Asturian: {{t+|ast|barbadiella|f}}, {{t+|ast|cazu|m}}
 * Avar: {{t|av|нилъу|sc=Cyrl}}
 * Aymara: {{t|ay|k'achi}}
