--- a/en/g/go off at score.741414.wikitext
+++ b/en/g/go off at score.741414.wikitext
@@ -3,6 +3,7 @@
 ===Verb===
 {{head|en|verb}}
 
-# {{lb|en|idiomatic}} Of a horse, to break suddenly into a gallop; of a person, suddenly to say or do something impetuous.
+# {{lb|en|idiomatic}} Of a horse, to break suddenly into a [[gallop]].
+# {{lb|en|idiomatic}} Suddenly to say or do something [[impetuous]].
 #* '''1888''', Rudyard Kipling, ‘Three and—an Extra’, ''Plain Tales from the Hills'' (Folio Society 2005, p. 12)
 #*: Bremmil '''went off at score''' after the baby's death and the general discomfort that followed, and Mrs Hauksbee annexed him.
