--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -24,6 +24,8 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Basque: {{t|eu|trabes}}
 * Bulgarian: {{t+|bg|бас}}, {{t+|bg|облог|m}}
 * Catalan: {{t+|ca|aposta|f}}, {{t|ca|juguesca|f}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Czech: {{t+|cs|sázka|f}}
 * Danish: {{t|da|væddemål|n}}
 * Dutch: {{t+|nl|weddenschap|f}}
@@ -37,8 +39,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Hebrew: {{t|he|התערבות|f|tr=hitarvut}}
 * Hungarian: {{t+|hu|fogadás}}
 * Icelandic: {{t|is|veðmál|n}}
-{{trans-mid}}
 * Italian: {{t+|it|scommessa|f}}
+{{trans-mid}}
+* Khmer: {{t-needed|km}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
@@ -53,7 +56,9 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Tagalog: {{t|tl|patnaw}}, {{t|tl|pusta}}
 * Telugu: {{t+|te|పందెము}}
 * Thai: {{t+|th|เดิมพัน}}
+* Tibetan: {{t|bo|རྒྱན}}
 * Turkish: {{t+|tr|bahis}}
+* Vietnamese: {{t-needed|vi}}
 * Zazaki: {{t|zza|bahs|c}}
 {{trans-bottom}}
 
