--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -41,7 +41,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 * Icelandic: {{t|is|veðmál|n}}
 * Italian: {{t+|it|scommessa|f}}
 {{trans-mid}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ទូ}}
 * Latvian: {{t+|lv|likme|f}}, {{t|lv|derības|f-p}}
 * Maltese: {{t|mt|mħatra}}
 * Norman: {{t|nrf|gageaille|f}}
