--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -10,8 +10,8 @@
 ===Pronunciation===
 * {{audio|En-American English.oga|Audio|lang=en}}
 
-===Proper noun===
-{{en-proper noun}}
+===Noun===
+{{en-noun|-}}
 
 # The form of the [[English]] language that is chiefly used in the [[United States]], contrasted with [[British English]] or [[Canadian English]] and that of other places.
 # The form of the English language that is chiefly used in [[North America]], contrasted with [[British English]] and that of other places.
