/* Translations */ Danish <blow#49840479>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -291,6 +291,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 {{trans-bottom}}
 
 {{trans-top|to blow a musical instrument to make it give a sound}} <!--5-->
+* Danish: {{t+|da|blæse}}, {{t|da|trutte}} {{qualifier|trumpet}}
 * Finnish: {{t+|fi|soittaa}}, {{t+|fi|puhaltaa}}
 * French: {{t+|fr|jouer|alt=jouer (de)}}, {{t+|fr|souffler|alt=souffler (dans)}}
 * Irish: {{t|ga|séid}}
