--- a/en/d/diacetyl.745830.wikitext
+++ b/en/d/diacetyl.745830.wikitext
@@ -1,4 +1,5 @@
 ==English==
+{{wikipedia|lang=en}}
 
 ===Etymology===
 {{prefix|di|acetyl|lang=en}}
@@ -12,3 +13,8 @@
 ====Derived terms====
 * {{l|en|diacetylmorphine}}
 * {{l|en|diacetylurea}}
+
+====See also====
+{{sense|butanedione}} 
+* {{l|en|popcorn lung}} {{gloss|a condition caused by inhaling diacetyl}}
+* {{l|en|artificial butter flavor}} {{gloss|the flavoring derived from diacetyl}}
