--- a/en/d/diacetyl.745830.wikitext
+++ b/en/d/diacetyl.745830.wikitext
@@ -8,7 +8,7 @@
 {{en-noun|-}}
 
 # {{lb|en|organic chemistry|in combination}} Two [[acetyl]] groups in a [[compound]]
-# {{lb|en|organic compound}} [[butanedione]]
+# {{lb|en|organic compound}} {{synonym of|lang=en|butanedione}}
 
 ====Derived terms====
 * {{l|en|diacetylmorphine}}
