--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -58,3 +58,5 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 * Uyghur: {{t|ug|نىنتېندو}}
 * Vietnamese: {{t-needed|vi}}
 {{trans-bottom}}
+
+[[Category:en:Nintendo]]
