--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -143,7 +143,7 @@ From {{inh|en|enm|oter}}, {{m|enm|otir}}, {{m|enm|otur}}, {{m|enm|otyre}}, from 
 * Urdu: {{t|ur|اودبلاؤ|tr=ūd-bilā'o|sc=ur-Arab|m}}
 * Uzbek: {{t+|uz|qunduz}}
 * Venetian: {{t|vec|lùdria|f}}, {{t|vec|lodra}}
-* Vietnamese: {{t+|vi|rái cá}}
+* Vietnamese: {{t+|vi|rái cá}}, {{t+|vi|rái}}
 * Volapük: {{t+|vo|lutar}}
 * Walloon: {{t+|wa|lote}}
 * Welsh: {{t|cy|dyfrgi|m}}, {{t|cy|dwrgi|m}}
