--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -89,7 +89,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial, inoffensive}}, {{t+|ja|察|tr=satsu|sc=Jpan}}
 * Macedonian: {{t|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t|mk|џандар|m|tr=džándar|sc=Cyrl}}
 * Norwegian: {{t+|no|purk|m}}
-* Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
+* Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}, {{t+|pl|pies|m}} {{qualifier|offensive}}
 * Portuguese: {{t+|pt|tira|m|f}}
 * Russian: {{t+|ru|коп|m}} {{qualifier|American}}, {{t+|ru|мент|m}} {{qualifier|offensive}}, {{t+|ru|ляга́вый|m}}, {{t+|ru|лега́вый|m}} {{qualifier|offensive}}, {{t+|ru|му́сор|m}} {{qualifier|more offensive}}, {{t+|ru|фарао́н|m}} {{qualifier|slang, dated}}, {{t+|ru|полица́й|m}} {{qualifier|slang}}
 * Slovak: {{t+|sk|poliš|m}}, {{t|sk|hekáč|m}}
