--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -555,6 +555,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 * Norwegian:
 *: Bokmål: {{t+|nb|slag|n}}
 *: Nynorsk: {{t|nn|slag|n}}
+* Old English: {{t|ang|sleġe|m}}
 * Portuguese: {{t+|pt|golpe|m}}
 * Romanian: {{t+|ro|lovitură|f}}
 * Romansch: {{t|rm|frida|f}}, {{t|rm|freida|f}}, {{t|rm|cuolp|m}}
