--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Karachay-Balkar: {{t|krc|эрлен|tr=erlen|sc=Cyrl}}, {{qualifier|karachay}} {{t|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}}, {{qualifier|obsolete}} {{t|krc|тыйын|tr=tıyın|sc=Cyrl}}
 * Kazakh: {{t+|kk|тиін}}
 * Khakas: {{t|kjh|тиин}}
-* Khmer: {{t+|km|កំប្រុក|tr=kɑmprok|sc=Khmr}}
+* Khmer: {{t+|km|កំប្រុក|tr=kɑmprok|sc=Khmr}}, {{t+|km|កង្ហែន}}
 * Kimaragang: {{t|kqr|bosing}}
 * Korean: {{t+|ko|다람쥐}}
 * Kumyk: {{t|kum|атъялман|tr=atyalman|sc=Cyrl}}
