--- a/en/c/cardiomyocyte.741586.wikitext
+++ b/en/c/cardiomyocyte.741586.wikitext
@@ -9,5 +9,10 @@
 
 # a [[cardiac]] [[muscle]] [[cell]] (or [[myocyte]]) in the [[heart]].
 
+====Translations====
+{{trans-top|cardiac muscle cell}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Anagrams===
 * {{anagrams|en|myocardiocyte}}
