--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -227,7 +227,7 @@ From earlier {{m|en|iland}}, from {{inh|en|enm|iland}}, {{m|enm|yland}}, {{m|enm
 * Old Church Slavonic:
 *: Cyrillic: {{t|cu|островъ|m}}
 * Old East Slavic: {{t|orv|островъ|m}}
-* Old English: {{t|ang|īeġ|f}}
+* Old English: {{t|ang|īeġ|f}}, {{t|ang|īeġland|n}}
 * Old French: {{t|fro|isle|f}}
 * Oriya: {{t+|or|ଟାପୁ}}, {{t|or|ଦ୍ଵୀପ}}
 * Ossetian: {{t|os|сакъадах}}
