/* Scottish Gaelic */ <mill#49886737>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -578,7 +578,7 @@ From {{inh|gv|sga|mil}}.
 * {{IPA|/miːʎ/|lang=gd}}
 
 ===Etymology 1===
-From {{inh|gd|sga|millid||spoils, ruins, destroys}}
+From {{inh|gd|sga|millid|t=spoils, ruins, destroys}}
 
 ====Verb====
 {{gd-verb|past=mhill|fut=millidh|vn=milleadh|pp=millte}}
@@ -590,10 +590,12 @@ From {{inh|gd|sga|millid||spoils, ruins, destroys}}
 ====Noun====
 {{head|gd|noun form|g=m}}
 
-# {{inflection of|meall||gen|s|lang=gd}}
-# {{inflection of|meall||p|lang=gd}}
+# {{inflection of|meall||gen|s|;|p|lang=gd}}
 
-===References===
+===Mutation===
+{{gd-mut-cons|m|ill}}
+
+===Further reading===
 * {{R:Dwelly}}
 * {{R:DIL|32253|head=millid}}
 
