--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -128,6 +128,21 @@ From {{der|zh|en|CD}}.
 
 ----
 
+==Finnish==
+
+===Pronunciation===
+* {{fi-IPA|seedee}}
+
+===Noun===
+{{fi-noun}}
+
+# {{l|en|CD}}, {{l|en|compact disc}}
+
+====Declension====
+{{fi-decl-maa-dot|CD|e|ä}}
+
+----
+
 ==French==
 {{wikipedia|lang=fr}}
 
