t+cmn:[[譜表]] t-balance t+cmn:[[谱表]] ([[WT:EDIT|Assisted]]) <staff#49912064>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -117,6 +117,8 @@ Sense of "group of military officers that assists a commander" and similar meani
 
 {{trans-top|music: series of horizontal lines}}
 * Catalan: {{t+|ca|pentagrama|m}}
+* Chinese:
+*: Mandarin: {{t+|cmn|譜表}}, {{t+|cmn|谱表|tr=pǔbiǎo}}
 * Czech: {{t+|cs|osnova|f}}
 * Dutch: {{t+|nl|balk|m}}, {{t+|nl|notenbalk|m}}
 * Finnish: {{t+|fi|nuottiviivasto}}
@@ -125,8 +127,8 @@ Sense of "group of military officers that assists a commander" and similar meani
 * German: {{t|de|Notenlinien|f-p}}
 * Greek: {{t+|el|πεντάγραμμο|n}}
 * Italian: {{t+|it|pentagramma|m}}
-* Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|譜表|tr=fuhyō|sc=Jpan}}, {{t|ja|五線|tr=gosen|sc=Jpan}}
 * Macedonian: {{t|mk|петолиние|n|tr=petolínie}}
 * Maori: {{t|mi|tārawa}}
 * Occitan: {{t+|oc|portada|f}}
