--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -55,6 +55,7 @@ From {{etyl|enm|en}} {{m|enm|squirel}}, {{m|enm|squyrelle}}, from {{etyl|xno|en}
 * Catalan: {{t+|ca|esquirol|m}}
 * Central Mazahua: {{t|maz|mijñi}}
 * Central Melanau: {{t|mel|bap}}
+* Central Sierra Miwok: {{t|csm|mé·we-}}
 * Chechen: {{t|ce|тарсал}}
 * Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}, {{t|chr|ᏌᎶᎵ|sc=Cher}}
 * Cheyenne: {{t|chy|no'ee'e}}
