t+fr:[[siffleur]] t-balance ([[WT:EDIT|Assisted]]) <whistler#49924852>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -21,6 +21,7 @@ From {{inh|en|enm|whisteler}}, {{m|enm|whistlar}}, {{m|enm|whystelare}}, from {{
 ====Translations====
 {{trans-top|someone or something that whistles}}
 * Finnish: {{t+|fi|viheltäjä}} (''man or animal''), {{t|fi|vihellin}} (''device'')
+* French: {{t+|fr|siffleur}}
 {{trans-mid}}
 * Spanish: {{t|es|silbador|m}}
 {{trans-bottom}}
