--- a/en/u/ulterior motive.802595.wikitext
+++ b/en/u/ulterior motive.802595.wikitext
@@ -33,6 +33,7 @@
 {{trans-mid}}
 * Japanese: {{t|ja|下心|tr=したごころ, shitagokoro|sc=Jpan}}, {{t|ja|他心|tr=たしん, tashin|sc=Jpan}}, {{t|ja|他意|tr=たい, tai|sc=Jpan}}
 * Korean: {{t|ko|배후목적|tr=baehu mokjeog|sc=Kore}}
+* Macedonian: {{t|mk|задна цел}}
 * Norwegian: {{t+|no|baktanke|m}}
 * Portuguese: {{t|pt|segunda intenção|f}}
 * Russian: {{t+|ru|за́дняя мысль|f}}, {{t|ru|скры́тый моти́в|m}}
