--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -175,7 +175,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 =====Translations=====
 {{trans-top|pester}}
 * Armenian: {{t+|hy|հետապնդել}}, {{t+|hy|հալածել}}, {{t+|hy|ջղայնացնել}}, {{t+|hy|հոգին հանել}}, {{t|hy|տեռորի տակ պահել}}
-* Bulgarian: {{t+|bg|дразня}}, {{t+|bg|безпокоя}}
+* Bulgarian: {{t+|bg|дразня́|impf}}, {{t+|bg|безпоко́я|impf}}
 * Dutch: {{t+|nl|lastigvallen}}, {{t+|nl|plagen}}
 * Finnish: {{t+|fi|kiusata}}
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
@@ -184,7 +184,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Hungarian: {{t+|hu|piszkál}}
 * Latin: {{t|la|sollicitō}}, {{t|la|inrītō}}, {{t|la|irrītō}}
 * Maori: {{t|mi|mamare}} {{qualifier|with constant questions}}
-* Russian: {{t+|ru|дразнить}}
+* Russian: {{t+|ru|дразни́ть|impf}}
 * Spanish: {{t+|es|fastidiar}}, {{t+|es|molestar}}
 * Tok Pisin: {{t-tpi|[[bagarapim]] [[sindaun]] bilong}}<!-- if these words make up a single idiom, they should be wikified as a single entity-->
 {{trans-bottom}}
