--- a/en/d/dissimilations.746937.wikitext
+++ b/en/d/dissimilations.746937.wikitext
@@ -4,3 +4,13 @@
 {{head|en|noun plural form}}
 
 # {{plural of|dissimilation|lang=en}}
+
+
+----
+
+==French==
+
+===Noun===
+{{head|fr|noun plural form}}
+
+# {{plural of|dissimilation|lang=fr}}
