--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|əʊ|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{m|enm|blo}}, {{m|enm|bloo}}, from {{etyl|ang|en}} {{m|ang|blāw||blue}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
+From {{inh|en|enm|blo}}, {{m|enm|bloo}}, from {{inh|en|ang|blāw||blue}}, from {{inh|en|gem-pro|*blēwaz||blue, dark blue, grey, black}}, from {{der|en|ine-pro|*bʰlēw-||yellow, blond, grey}}. Cognate with {{cog|la|flavus||yellow}}. More at {{l|en|blue}}.
 
 ====Adjective====
 {{en-adj|er|more}}
@@ -18,7 +18,7 @@ From {{etyl|enm|en}} {{m|enm|blo}}, {{m|enm|bloo}}, from {{etyl|ang|en}} {{m|ang
 
 ===Etymology 2===
 {{PIE root|en|bʰleh₁|id=blow}}
-From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to blow, breathe, inflate, sound}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}} and {{cog|xcl|բեղուն||fertile}}).
+From {{inh|en|enm|blowen}}, from {{inh|en|ang|blāwan||to blow, breathe, inflate, sound}}, from {{inh|en|gem-pro|*blēaną||to blow}} (compare German {{m|de|blähen}}), from {{der|en|ine-pro|*bʰleh₁-||to swell, blow up}} (compare {{cog|la|flō||to blow}} and {{cog|xcl|բեղուն||fertile}}).
 
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
@@ -494,7 +494,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 {{trans-see|cocaine|snow}}
 
 ===Etymology 3===
-{{etyl|enm|en}} {{m|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blēwe}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blewwaną||to beat}} (compare Old Norse {{m|non|blegði||wedge}}, German {{m|de|bläuen}}, Middle Dutch {{m|nl|blouwen}}). Related to [[block]].
+From {{inh|en|enm|blowe}}, {{m|enm|blaw}}, northern variant of {{m|enm|blewe|blēwe}}, from {{inh|en|gem-pro|*blewwaną||to beat}} (compare Old Norse {{m|non|blegði||wedge}}, German {{m|de|bläuen}}, Middle Dutch {{m|nl|blouwen}}). Related to [[block]].
 
 ====Noun====
 {{en-noun}}
@@ -587,7 +587,7 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 
 ===Etymology 4===
 {{PIE root|en|bʰleh₃}}
-{{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blōwan}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blōaną}} (compare Dutch {{m|nl|bloeien}}, German {{m|de|blühen}}), from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰleh₃-}} (compare Latin {{m|la|florēre}} 'to bloom').
+{{inh|en|enm|blowen}}, from {{inh|en|ang|blōwan}}, from {{inh|en|gem-pro|*blōaną}} (compare Dutch {{m|nl|bloeien}}, German {{m|de|blühen}}), from {{der|en|ine-pro|*bʰleh₃-}} (compare Latin {{m|la|florēre}} 'to bloom').
 
 ====Verb====
 {{en-verb|blows|blowing|blew|blown}}
@@ -650,3 +650,12 @@ From {{etyl|enm|en}} {{m|enm|blowen}}, from {{etyl|ang|en}} {{m|ang|blāwan||to 
 [[Category:en:Recreational drugs]]
 [[Category:en:Singing]]
 [[Category:en:Wind]]
+
+----
+
+==Middle English==
+
+===Verb===
+{{head|enm|verb}}
+
+# {{alternative form of|blowen|lang=enm|t=to blow|id=to blow}}
