--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -72,7 +72,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 
 =====Translations=====
 {{trans-top|police officer}}
-* Belarusian: {{t-needed|be}}
+* Belarusian: {{t|be|мент|m}}
 * Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
 * Chinese:
 *: Mandarin: {{t+|cmn|条子|tr=tiáozǐ |sc=Hani}}
@@ -86,8 +86,8 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Greek: {{t+|el|μπάτσος|m}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
-{{trans-mid}}
 * Italian: {{t|it|piedipiatti}}, {{t+|it|poliziotto|m}}, {{t+|it|secondino|m}}, {{t+|it|sbirro|m}} {{qualifier|offensive}}
+{{trans-mid}}
 * Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial, inoffensive}}, {{t+|ja|察|tr=satsu|sc=Jpan}}
 * Macedonian: {{t|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t|mk|џандар|m|tr=džándar|sc=Cyrl}}
 * Norwegian: {{t+|no|purk|m}}
@@ -98,6 +98,7 @@ Short for {{m|en|copper||police officer}}, itself from {{m|en||cop|one who cops}
 * Spanish: {{t+|es|tombo|m}}, {{t+|es|paco|m}}
 * Swedish: {{t+|sv|snut}}
 * Turkish: {{t+|tr|aynasız}}
+* Ukrainian: {{t|uk|мент|m}}
 * Vietnamese: {{t|vi|cớm}}
 {{trans-bottom}}
 
