t+hu:[[időszerűtlenség]] ([[WT:EDIT|Assisted]]) <untimeliness#49948731>

--- a/en/u/untimeliness.742256.wikitext
+++ b/en/u/untimeliness.742256.wikitext
@@ -13,4 +13,5 @@
 * Estonian: {{t|et|ajakohatus}}
 {{trans-mid}}
 * Finnish: {{t+|fi|huono}} {{t+|fi|ajoitus}}; {{t|fi|ennenaikaisuus}}
+* Hungarian: {{t|hu|időszerűtlenség}}
 {{trans-bottom}}
