--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -341,14 +341,6 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Zazaki: {{t|zza|wıni bı}}
 {{trans-bottom}}
 
-====See also====
-* {{l|en|by then}}
-* {{l|en|just then}}
-* {{l|en|now and then}}
-* {{l|en|then again}}
-* {{l|en|there and then}}
-* {{l|en|until then}}
-
 ===Noun===
 {{head|en|noun}}
 
@@ -381,6 +373,17 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 {{head|en|conjunction}}
 
 # {{obsolete spelling of|than|lang=en}}
+
+===Derived terms===
+{{der3|title=Terms derived from ''then'' (all parts of speech)|lang=en
+| {{l|en|by then}}
+| {{l|en|just then}}
+| {{l|en|now and then}}
+| {{l|en|that was then, this is now}}
+| {{l|en|then again}}
+| {{l|en|there and then}}
+| {{l|en|until then}}
+}}
 
 ===References===
 * {{R:OED2}}
