--- a/en/o/otter.8227.wikitext
+++ b/en/o/otter.8227.wikitext
@@ -246,6 +246,15 @@ From {{inh|dum|odt|ottar}}, from {{inh|dum|gem-pro|*utraz}}, from {{inh|dum|ine-
 
 ----
 
+==Middle English==
+
+===Noun===
+{{head|enm|noun}}
+
+# {{alternative form of|lang=enm|oter}}
+
+----
+
 ==Westrobothnian==
 
 ===Etymology===
