--- a/en/u/unfriendliness.742226.wikitext
+++ b/en/u/unfriendliness.742226.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{suffix|unfriendly|ness|lang=en}}
+From {{af|en|unfriendly|-ness}}. Compare {{cog|nl|onvriendelijkheid}}, {{cog|de|Unfreundlichkeit}}.
 
 ===Noun===
 {{en-noun|~|es}}
