--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -33,7 +33,10 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 # A [[nasty]] or [[disgusting]] person, usually male.
 #: {{ux|en|She considered him a '''pig''' as he invariably stared at her bosom when they talked.}}
 # A [[dirty]] or [[slovenly]] person.
-#: {{ux|en|He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.}}
+#:{{ux|en|Example 1: He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.
+
+Example 2: The Orange Man in the highest office in the land acted like a PIG. He called people that disagreed with him pigs but in reality, he was the biggest dirtiest pig in the whole wide world.
+}}
 # {{senseid|en|police officer}} {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: {{ux|en|The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.}}
 #* '''1989''', {{w|Dan Simmons}}, ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
