--- a/en/c/chiliaëdron.802699.wikitext
+++ b/en/c/chiliaëdron.802699.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|s}}
+{{en-noun|!}}
 
 # {{rare spelling of|chiliahedron|lang=en}}
 #* '''1689–1700''', {{w|John Locke}}, ''[[w:An Essay Concerning Human Understanding|An Eſſay Concerning Humane Underſtanding]]'' (fourth edition, 1700), book II, chapter xxix, § 13, [https://archive.org/stream/essayconcernin00lockuoft#page/204/mode/2up page 204]:
