--- a/en/d/DOJ.26215.wikitext
+++ b/en/d/DOJ.26215.wikitext
@@ -5,7 +5,7 @@
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
 
-# {{lb|en|US}} [[US]] Department of Justice
+# {{lb|en|US}} {{initialism of|{{w|United States Department of Justice}}|lang=en}}
 # Date of Judgment
 # {{lb|en|travel|aviation}} [[double open jaw]]
 
