t+pwn:[[qau]] ([[WT:EDIT|Assisted]]) <bamboo#49981979>

--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -100,6 +100,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 * Northern Thai: {{t-needed|nod}}
 * Norwegian:
 *: Bokmål: {{t|nb|bambus|m}}
+* Paiwan: {{t|pwn|qau}}
 * Persian: {{t+|fa|خیزران|tr=xayzarân|sc=fa-Arab}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Romanian: {{t+|ro|bambus|m}}, {{t|ro|bambu|m}}
