--- a/en/c/countdown.34096.wikitext
+++ b/en/c/countdown.34096.wikitext
@@ -33,11 +33,14 @@ From {{compound|count|down|lang=en}}.
 * Greek: {{t+|el|αντίστροφη μέτρηση|f|sc=Grek}}
 * Hebrew: {{t|he|ספירה לאחור|f|tr=sfira le'akhor|sc=Hebr}}
 * Hungarian: {{t|hu|visszaszámolás}}
-{{trans-mid}}
 * Italian: {{t|it|conto alla rovescia|m}}
 * Japanese: {{t|ja|カウントダウン|tr=kauntodaun|sc=Jpan}}
+{{trans-mid}}
 * Korean: {{t+|ko|카운트다운}}
 * Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje|sc=Cyrl}}
+* Norwegian:
+*: Bokmål: {{t|nb|nedtelling|m|f}}
+*: Nynorsk: {{t|nn|nedteljing|f}}
 * Polish: {{t+|pl|odliczanie|n}}
 * Portuguese: {{t|pt|contagem regressiva}}
 * Romanian: {{t|ro|denumărare|f}}, {{t|ro|numărare regresivă}}, {{t|ro|numărare inversă|f}}
