--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -240,6 +240,7 @@ From {{inh|en|enm|at}}, from {{inh|en|ang|æt||at, near, by, toward}}, from {{in
 * French: {{t+|fr|à}}
 * Korean: {{t+|ko|에|alt=...에}}
 * Spanish: {{t+|es|a}}
+* Swedish: {{t+|sv|för}}, {{t+|sv|à}}
 {{trans-bottom}}
 
 ====Noun====
