/* Translations */ Added Ancient Greek translation of this word. <bubble#49992457>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -124,6 +124,7 @@ Partly imitative, also influenced by {{m|en|burble}}. Compare {{cog|dum|bobbe||b
 * Georgian: {{t|ka|ბუშტი|sc=Geor}}
 * German: {{t+|de|Blase|f}}
 * Greek: {{t+|el|φυσαλίδα|f|sc=Grek}}
+*: Ancient Greek: {{t|grc|πομφόλυξ|f}}
 * Gujarati: {{t|gu|છેતરપિંડી|f|tr=chētarapiṇḍī|sc=Gujr}}, {{t|gu|બબલ|f|tr=babala|sc=Gujr}}
 * Hausa: {{t|ha|kumfa}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a}}
