--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -4,7 +4,7 @@
 ===Pronunciation===
 * {{IPA|/kɹʊk/|lang=en}}
 * {{audio|en-us-crook.ogg|Audio (US)|lang=en}}
-* {{rhymes|ʊk|lang=en}}
+* {{rhymes|ʊk|lang=en}} yoooo
 
 ===Etymology 1===
 From {{inh|en|enm|croke}}, {{m|enm|crok}}, from {{inh|en|ang|*crōc|t=hook, bend, crook}}, from {{inh|en|gem-pro|*krōkaz||bend, hook}}, from {{der|en|ine-pro|*greg-||tracery, basket, bend}}. Cognate with {{cog|nl|kreuk||a bend, fold, wrinkle}}, {{cog|gml|kroke}}, {{m|gml|krake||fold, wrinkle}}, {{cog|da|krog||crook, hook}}, {{cog|sv|krok||crook, hook}}, {{cog|is|krókur||hook}}.
