--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -270,18 +270,17 @@ Sense of "group of military officers that assists a commander" and similar meani
 * {{l|fr|staffeur}}
 
 ===Etymology 2===
-20th century. From {{etyl|en|fr}} {{m|en|staff}}
+20th century. From {{bor|fr|en|staff}}.
 
 ====Noun====
 {{fr-noun|m}}
 
 # [[#English|staff]], employees of a business.
-#: ''les membres du '''staff'''.''
+#: {{syn|fr|équipe||personnel}}
+#: {{ux|fr|les membres du '''staff'''.}}
 # [[governing]] [[body]] (army, corporation, administration, etc.)
-#: ''Il avait été prévu une centaine d'infirmiers et un '''staff''' comprenant le médecin-chef, deux assistants, six internes.'' (H. Bazin, Fin asiles, 1959, p. 81)
-
-=====Synonyms=====
-* {{l|fr|équipe}}, {{l|fr|personnel}}
+#* '''1959''', H. Bazin, ''Fin asiles'', p. 81:
+#*: {{quote|fr|Il avait été prévu une centaine d'infirmiers et un '''staff''' comprenant le médecin-chef, deux assistants, six internes.}}
 
 ===References===
 * {{R:TLFi}}
