--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -133,6 +133,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 {{trans-top|soon afterward}}
 * Albanian: {{t+|sq|pastaj}}
 * Arabic: {{t+|ar|ثُمَّ}}
+*: Moroccan Arabic: {{t|ary|منْبعْد|tr=mənbəʕd}}
 * Armenian: {{t+|hy|հետո}}
 * Belarusian: {{t|be|затым|tr=zatým|sc=Cyrl}}
 * Catalan: {{t+|ca|després}}, {{t+|ca|llavors}}
@@ -161,6 +162,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Luxembourgish: {{t+|lb|dunn}}
 * Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
 * Malay: {{t|ms|tidak lama kemudian}}
+* Maltese: {{t|mt|mbagħad}}
 * Maori: {{t|mi|kātahi}}
 {{trans-mid}}
 * Mongolian: {{t-needed|mn}}
@@ -192,6 +194,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}
 * Venetian: {{t|vec|po}}, {{t|vec|può}}
 * Vietnamese: {{t+|vi|sau đó}}, {{t+|vi|rồi}}, {{t|vi|xong rồi}}
+* Walloon: {{t+|wa|adon-pwis}}, {{t+|wa|adon-après}}, {{t|wa|pu}}
 * Zazaki: {{t|zza|demena}}, {{t|zza|solığna}}
 {{trans-bottom}}
 
