--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -126,6 +126,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
 * Vietnamese: {{t|vi|khi ấy}}, {{t|vi|khi đó}}, {{t|vi|lúc đó}}, {{t|vi|lúc ấy}}, {{t|vi|hồi đó}}
+* Walloon: {{t+|wa|adon}}, {{t|wa|a ç' moumint la}}
 * Welsh: {{t|cy|bryd hynny}}
 * Zazaki: {{t|zza|dıma}}, {{t|zza|bahdo}}, {{t|zza|wexto}}
 {{trans-bottom}}
