--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -20,12 +20,14 @@ From {{etyl|it|en}} {{m|it|monsignore}}, from {{etyl|fr|en}} {{m|fr|monseigneur}
 
 ====Translations====
 {{trans-top|ecclesiastic title bestowed on some Roman Catholic clerics by the Pope}}
+* Chinese:
+*: Mandarin: {{t|cmn|蒙席|tr=méngxí}}
 * Dutch: {{t+|nl|monseigneur|m}}
 * French: {{t+|fr|Monseigneur}}
 * German: {{t+|de|Monsignore|m}}
+{{trans-mid}}
 * Italian: {{t+|it|monsignore|m}}
 * Polish: {{t+|pl|prałat|m}}
-{{trans-mid}}
 * Portuguese: {{t|pt|monsenhor|m}}
 * Russian: {{t+|ru|монсеньо́р|m}}
 * Spanish: {{t+|es|monseñor|m}}
