--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -163,7 +163,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Luxembourgish: {{t+|lb|dunn}}
 * Macedonian: {{t|mk|потоа|tr=potoa|sc=Cyrl}}
 * Malay: {{t|ms|tidak lama kemudian}}
-* Maltese: {{t|mt|mbagħad}}
+* Maltese: {{t|mt|mbagħad|tr=mbaʕad}}
 * Maori: {{t|mi|kātahi}}
 {{trans-mid}}
 * Mongolian: {{t-needed|mn}}
