--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -134,7 +134,7 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 {{trans-top|soon afterward}}
 * Albanian: {{t+|sq|pastaj}}
 * Arabic: {{t+|ar|ثُمَّ}}
-*: Moroccan Arabic: {{t|ary|منْبعْد|tr=mənbəʕd}}
+*: Moroccan Arabic: {{t|ary|منْبعْد|tr=mənbəʕd}}, {{t|ary|عاد|tr=ʕæd}}
 * Armenian: {{t+|hy|հետո}}
 * Belarusian: {{t|be|затым|tr=zatým|sc=Cyrl}}
 * Catalan: {{t+|ca|després}}, {{t+|ca|llavors}}
@@ -189,13 +189,14 @@ False cognate to {{noncog|fi|tänä||at this (time), on this (day, year)}} (from
 * Swahili: {{t|sw|kisha}}
 * Swedish: {{t+|sv|därpå}}, {{t+|sv|sen}}, {{t+|sv|sedan}}, {{t+|sv|så}}
 * Taos: {{t|twf|yíane}}
+* Tashelhit: {{t|shi|ⵄⴰⴷ|tr=ʕæd}}
 * Thai: {{t|th|แล้วก็}}
 * Tok Pisin: {{t|tpi|orait}}
 * Ukrainian: {{t|uk|потім|tr=pótim|sc=Cyrl}}
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}
 * Venetian: {{t|vec|po}}, {{t|vec|può}}
 * Vietnamese: {{t+|vi|sau đó}}, {{t+|vi|rồi}}, {{t|vi|xong rồi}}
-* Walloon: {{t+|wa|adon-pwis}}, {{t+|wa|adon-après}}, {{t|wa|pu}}
+* Walloon: {{t+|wa|adon-pwis}}, {{t+|wa|adon-après}}, {{t|wa|pu}}, {{t+|wa|adon}}
 * Zazaki: {{t|zza|demena}}, {{t|zza|solığna}}
 {{trans-bottom}}
 
