--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -78,6 +78,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 * Italian: {{t+|it|bambù|m}}
 * Japanese: {{t+|ja|竹|tr=たけ, take|sc=Jpan}}
 * Kannada: {{t+|kn|ಬಿದಿರು|sc=Knda}}
+* Kapampangan: {{t|pam|kuwayan}}
 * Kazakh: {{t|kk|бамбук|sc=Cyrl}}
 * Khmer: {{t+|km|ឫស្សី}}
 * Kikuyu: {{t|ki|mũrangi|c3}}
