--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -43,6 +43,7 @@ Borrowed from {{bor|en|nl|bamboe}}, from {{etyl|pt|en}} {{m|pt|bambu}}, from {{e
 * Armenian: {{t+|hy|բամբուկ|sc=Armn}}
 * Assamese: {{t|as|বাঁহ}}
 * Asturian: {{t|ast|bambú|m}}
+* Atayal: {{t|tay|llkus}}
 * Azerbaijani: {{t+|az|bambuk}}
 * Banjarese: {{t|bjn|buluh}}, {{t|bjn|paring}}
 * Belarusian: {{t|be|бамбу́к|m|sc=Cyrl}}
