/* Derived terms */ <whistle#50042238>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -226,14 +226,13 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 #*: He chanced to miss his dog; we stood still till he had '''whistled''' him up.
 
 ====Derived terms====
-{{rel-top3|Terms derived from the verb ''whistle''}}
-* {{l|en|whistle Dixie}}
-* {{l|en|whistle for}} something
-{{rel-mid3}}
-* {{l|en|whistle in the dark}}
-{{rel-mid3}}
-* {{l|en|whistle past the graveyard}}
-{{rel-bottom}}
+{{der3|lang=en|title=Terms derived from the verb ''whistle''
+| {{l|en|whistle Dixie}}
+| {{l|en|whistle for}} something
+| {{l|en|whistle in the dark}}
+| {{l|en|whistle in the wind}}
+| {{l|en|whistle past the graveyard}}
+}}
 
 ====Translations====
 {{trans-top|to produce a whistling sound}}
