--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -81,7 +81,7 @@ From {{inh|en|enm|fraccioun||a breaking}}, from {{bor|en|xno|-}}, from {{der|en|
 * Latvian: {{t|lv|daļskaitlis|m}}
 {{trans-mid}}
 * Macedonian: {{t|mk|дел|m|tr=del}}, {{t|mk|делче|n|tr=délče}}
-* Maori: {{t|mi|hautau}}
+* Maori: {{t|mi|hautau}}, {{t|mi|hautanga}}
 * Norwegian: {{t|no|andel|m}}, {{t+|no|brøkdel|m}}
 * Polish: {{t+|pl|ułamek|m}}, {{t+|pl|cząstka|f}}
 * Portuguese: {{qualifier|Brazil}} [[fração]] {{g|f}}, {{qualifier|Portugal}} [[fracção]] {{g|f}}
