--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -202,7 +202,7 @@ From {{inh|en|enm|again}}, {{m|enm|ayain}}, {{m|enm|ayen}}, {{m|enm|anȝen}}, fr
 * Tatar: {{t|tt|кабаттан}}
 * Telugu: {{t+|te|మళ్లీ}}, {{t|te|మరలా}}
 * Thai: {{t+|th|อีก}}, {{t+|th|ใหม่}}
-* Tok : {{t|tpi|gen}}
+* Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
 * Turkmen: {{t|tk|ýene}}, {{t+|tk|baryp}}
 * Ukrainian: {{t|uk|зно́ву}}, {{t|uk|знов}}, {{t|uk|ще раз}}
