added picture dictonary <chin#50052281>

--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -1,5 +1,6 @@
 {{also|Chin|chín|chỉn|-chin}}
 ==English==
+{{Wiktionary:Picture dictionary/en:head}}
 [[File:Ambroise Thomas 2.jpg|thumb|right|Composer Ambrose Thomas with hand on chin (1).]]
 
 ===Pronunciation===
