/* Derived terms */ <quadruped#50057486>

--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -13,7 +13,11 @@ Borrowed from {{bor|en|fr|quadrupède}}, from {{etyl|frm|en}}, from {{etyl|la|en
 # a [[mammal]] [[ambulating]] [[on all fours]]
 
 ====Derived terms====
-* {{l|en|quadrupedal}}
+{{der2|lang=en
+|quadrupedal
+|quadrupedism
+|quadrupedalism
+|quadrupedy}}
 
 ====Translations====
 {{trans-top|a four-footed or four-legged animal}}
