--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -64,7 +64,7 @@ Short for {{m|es|microbús}}.
 ===Noun===
 {{es-noun|m}}
 
-# {{lb|es|Chile|Argentina}} [[w:transit bus|public bus]]
+# {{lb|es|Chile (f.)|Argentina}} [[w:transit bus|public bus]]
 # {{lb|es|Mexico}} [[minibus]]
 
 ====Synonyms====
