--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -176,6 +176,8 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 {{trans-top|pester}}
 * Armenian: {{t+|hy|հետապնդել}}, {{t+|hy|հալածել}}, {{t+|hy|ջղայնացնել}}, {{t+|hy|հոգին հանել}}, {{t|hy|տեռորի տակ պահել}}
 * Bulgarian: {{t+|bg|дразня́|impf}}, {{t+|bg|безпоко́я|impf}}
+* Chinese:
+*: Mandarin: {{t|cmn|纠缠， 困扰}}
 * Dutch: {{t+|nl|lastigvallen}}, {{t+|nl|plagen}}
 * Finnish: {{t+|fi|kiusata}}
 * German: {{t+|de|belästigen}}, {{t+|de|plagen}}, {{t+|de|piesacken}}
