--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -58,8 +58,8 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Indonesian: {{t|id|blumkol}}, {{t+|id|kubis bunga}}, {{t+|id|kembang kol}}
 * Irish: {{t|ga|cóilis|f}}
 * Italian: {{t+|it|cavolfiore|m}}
-{{trans-mid}}
 * Japanese: {{t+|ja|カリフラワー|tr=karifurawā}}, {{t|ja|花野菜|tr=hanayasai}}, {{t|ja|花甘藍|tr=hanakanran}}, {{t|ja|花キャベツ|tr=hanakyabetsu}}
+{{trans-mid}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu}}
 * Latvian: {{t|lv|ziedkāposts|m}}
 * Lithuanian: {{t|lt|žiedinis kopūstas|m}}, {{t|lt|žiedbastučiai|m-p}}
@@ -91,6 +91,7 @@ From 16th century {{m|en|cole-florye}}. Compare {{cog|la|caulis}}, {{cog|fr|chou
 * Ukrainian: {{t|uk|кучеря́ва капу́ста|f|sc=Cyrl}}, {{t|uk|цвітна́ капу́ста|f|sc=Cyrl}}
 * Vietnamese: {{t|vi|bông cải trắng}}, {{t|vi|cải bông trắng}}, {{t|vi|cải hoa}}, {{t|vi|hoa lơ}}, {{t|vi|hoa lơ trắng}}, {{t|vi|su lơ}}, {{t|vi|súp lơ}}
 * Volapük: {{t+|vo|florabrasid}}
+* Welsh: {{t|cy|colifflŵar|m}}, {{t+|cy|bresychen wen|f}}, {{t+|cy|blodfresychen|f}}
 * Wolof: {{t|wo|sufëlëer}}, {{t|wo|sufólóor}}
 {{trans-bottom}}
 
