t+kea:[[zibia]] ([[WT:EDIT|Assisted]]) <whistle#50069881>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -276,6 +276,7 @@ From {{inh|en|enm|whistlen}}, from {{inh|en|ang|hwistlan}}, {{m|ang|hwistlian||t
 * Italian: {{t+|it|fischiare}}
 * Japanese: {{t|ja|[[口笛]][[を]][[吹く]]|tr=くちぶえをふく, kuchibue o fuku}}
 {{trans-mid}}
+* Kabuverdianu: {{t|kea|zibia}}
 * Khmer: {{t+|km|ហួច|tr=houch|sc=Khmr}}
 * Korean: {{t|ko|[[휘파람]][[을]] [[불다]]}}
 * Lao: {{t-needed|lo}}
