--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -155,6 +155,7 @@ From 16th-century criminal slang, likely from {{m|en|abet}} or {{der|en|ang|bæt
 {{trans-bottom}}
 
 {{trans-top|To place money into the pot in poker}}
+* Finnish: {{t+|fi|panostaa}}
 * Spanish: {{t+|es|apostar}}
 {{trans-mid}}
 * Swedish: {{t+|sv|satsa}}
