--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -7,8 +7,8 @@
 ===Suffix===
 {{en-suffix}}
 
-# A practitioner of a specific type of [[divination]]
-# A user of a specified type of [[magic]]
+# A practitioner of a specific type of [[divination]].
+# A user of a specified type of [[magic]].
 
 ====Derived terms====
 {{suffixsee|en}}
