--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -238,6 +238,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Ojibwe: {{t|oj|gookoosh}}
 * Okinawan: {{t|ryu|うゎー|tr=waa}}
 * Old Church Slavonic: {{t|cu|свиниꙗ|f}}
+* Old English: {{t|ang|swīn|n}}
 * Old Turkic: {{t|otk|𐱃𐰆𐰭𐰆𐰕|tr=toŋuz}}
 * Oriya: {{t|or|ଘୁଷୁରିଛୁଆ}}
 * Ossetian: {{t|os|хуы}}
