t+fi:[[sonoluminesenssi]] ([[WT:EDIT|Assisted]]) <sonoluminescence#50087375>

--- a/en/s/sonoluminescence.855775.wikitext
+++ b/en/s/sonoluminescence.855775.wikitext
@@ -12,6 +12,7 @@
 ====Translations====
 {{trans-top|The emission of short bursts of light from imploding bubbles}}
 * Basque: {{t+|eu|sonolumineszentzia}}
+* Finnish: {{t|fi|sonoluminesenssi}}
 * Italian: {{t+|it|sonoluminescenza|f}}
 * Romanian: {{t+|ro|sonoluminiscență|f}}
 {{trans-mid}}
