--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -108,6 +108,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Amharic: {{t|am|ነገር|sc=Ethi}}
 * Arabic: {{t+|ar|شَيْء|m}}
 *: Egyptian Arabic: {{t|arz|شيء|m|tr=šeʾ|sc=Arab}}, {{t|arz|حاجة|f|tr=ḥaga|sc=Arab}}
+*: Hijazi Arabic: {{t|acw|شي|m|tr=šay|sc=Arab}}, {{t|acw|حاجة|f|tr=ḥāja|sc=Arab}}
 * Aragonese: {{t|an|cosa|f}}
 * Armenian: {{t+|hy|իր}}, {{t+|hy|բան}}
 * Assamese: {{t|as|বস্তু}}
