/* Finnish */ -etyl <Raine#50092828>

--- a/en/r/Raine.774576.wikitext
+++ b/en/r/Raine.774576.wikitext
@@ -21,7 +21,7 @@
 ===Proper noun===
 {{fi-proper noun}}
 
-# {{given name|male|lang=fi}} derived form the {{etyl|de|fi}} {{m|de|Rainer}}.
+# {{given name|male|lang=fi}} derived from {{der|fi|de|Rainer}}.
 
 ====Declension====
 {{fi-decl-nalle|Rain|||a}}
