--- a/en/p/pizzica.801257.wikitext
+++ b/en/p/pizzica.801257.wikitext
@@ -6,7 +6,7 @@ Borrowed from {{bor|en|it|pizzica}}
 ===Noun===
 {{en-noun|?}}
 
-# {{lb|en|music}} A popular traditional [[dance]] of [[Italy]], originating on the [[Salento]] peninsula
+# {{lb|en|dance}} A popular traditional [[dance]] of [[Italy]], originating on the [[Salento]] peninsula
 #* {{quote-journal|2007|January 19|The New York Times|Pop and Rock Listings|New York Times|url=http://www.nytimes.com/2007/01/19/arts/music/19pop.html
 |passage=With strings, accordion, flute and lots of tambourine, it pays particular attention to the '''pizzica''', a galloping six-beat dance related to the tarantella and long used as a faith-healing cure for spider bites.}}
 
