--- a/en/p/pizzica.801257.wikitext
+++ b/en/p/pizzica.801257.wikitext
@@ -28,6 +28,10 @@ Borrowed from {{bor|en|it|pizzica}}.
 
 # {{lb|it|dance}} {{l|en|pizzica}}
 
+====See also====
+* {{l|it|tarantella}}
+* {{l|it|tarantismo}}
+
 ===Verb===
 {{head|it|verb form}}
 
