t+el:[[πράξη νομοθετικού περιεχομένου]] t-balance ([[WT:EDIT|Assisted]]) <executive order#50099690>

--- a/en/e/executive order.776982.wikitext
+++ b/en/e/executive order.776982.wikitext
@@ -12,8 +12,9 @@
 *: Cantonese: {{t-needed|yue}}
 *: Mandarin: {{t+|cmn|行政命令|tr=xíngzhèng mìnglìng}}
 * Finnish: {{t+|fi|asetus}} (''closest equivalent'')
-{{trans-mid}}
 * French: {{t+|fr|ordonnance|f}}
+{{trans-mid}}
+* Greek: {{t|el|πράξη νομοθετικού περιεχομένου|f}}
 * Japanese: {{t|ja|大統領令|tr=daitōryōrei}}
 * Korean: {{t-needed|ko}}
 * Spanish: {{t-needed|es}}
