--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -108,6 +108,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * Occitan: {{t+|oc|tais|m}}, {{t+|oc|rabàs|m}}
 * Old English: {{t|ang|brocc|m}}
 * Old Irish: {{t|sga|brocc|m}}
+* Ossetian: {{t|os|зыгъа́рӕг}}
 * Persian: {{t+|fa|گورکن|tr=gurkan}}, {{t|fa|اشغور|tr=ošġur}}
 * Plautdietsch: {{t|pdt|Eadschwien|n}}
 * Polish: {{t+|pl|borsuk|m}}, {{t+|pl|jaźwiec|m}}
