/* Translations */ Added Ancient Greek translation of this word. <staff#50111484>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -85,6 +85,7 @@ Sense of "group of military officers that assists a commander" and similar meani
 * Georgian: {{t|ka|ჯოხი}}, {{t|ka|კვერთხი}}
 * German: {{t+|de|Stab|m}}
 * Greek: {{t+|el|ράβδος|f}}, {{t+|el|ραβδί|n}}
+*: Ancient Greek: {{t|grc|βακτηρία|f}}
 * Hebrew: {{t+|he|מקל|m|tr=makél}}, {{t+|he|מטה|m|tr=maté}}
 * Hungarian: {{t+|hu|bot}}, {{t+|hu|rúd}}
 * Ido: {{t+|io|bastono}}
