--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -82,6 +82,7 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Abau: {{t|aau|huok}}
 * Abenaki: {{t|abe|piks}}
 * Abkhaz: {{t|ab|аҳәа}}
+* Abu' Arapesh: {{t|aah|bul}}
 * Acehnese: {{t|ace|bui}}
 * Adyghe: {{t|ady|къо}}, {{t|ady|хъо}}
 * Afrikaans: {{t+|af|vark}}
@@ -200,13 +201,13 @@ The slang sense of "police officer" is attested since at least 1785.<ref>'''2003
 * Latgalian: {{t|ltg|cyuka|f}}
 * Latin: {{t+|la|sus|c}}, {{t+|la|porcus|m}}<!--do not put the scientific name here-->
 * Latvian: {{t+|lv|cūka|f}}
-{{trans-mid}}
 * Ledo Kaili: {{t-check|lew|bavu}}
 * Limburgish: {{t+|li|zwien}}, {{t+|li|verke}}
 * Lithuanian: {{t+|lt|kiaulė|f}}
 * Livonian: {{t|liv|sigā}}
 * Low German: {{t+|nds|Swien|n}}
 * Ludian: {{t|lud|šiga}}
+{{trans-mid}}
 * Luganda: {{t|lg|embizzi}}
 * Lusitanian: {{t|xls|porcom}}, {{t|xls|porgom}}
 * Lü: {{t|khb|ᦖᦴ}}
