--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -27,6 +27,8 @@
 * Finnish: {{t|fi|hiusverkko}}
 * French: {{t+|fr|filet à cheveux|m}}, {{t+|fr|résille|f}}
 * German: {{t+|de|Haarnetz|n}}
+* Greek:
+*: Ancient Greek: {{t|grc|κεκρύφαλος|m}}
 {{trans-mid}}
 * Interlingua: [[rete]] pro le [[capillos]]
 * Irish: {{t|ga|eangach ghruaige|f}}, {{t|ga|líontán gruaige|m}}
