/* Translations */ +sh poslije, nakon toga <then#50130476>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -176,8 +176,8 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Russian: {{t+|ru|зате́м}}, {{t+|ru|пото́м}}, {{t+|ru|по́сле}} {{qualifier|colloquial}}
 * Scottish Gaelic: {{t|gd|an dèidh sin}}, {{t|gd|an dèidh làimhe}}
 * Serbo-Croatian:
-*: Cyrillic: {{t|sh|затим}}, {{t+|sh|потом}}, {{t|sh|после}}
-*: Roman: {{t+|sh|zatim}}, {{t+|sh|potom}}, {{t+|sh|posle}}
+*: Cyrillic: {{t|sh|затим}}, {{t+|sh|потом}}, {{t|sh|после}} {{qualifier|Ekavian}}, {{t|sh|послије}} {{qualifier|Ijekavian}}, {{t+|sh|након тога}}
+*: Roman: {{t+|sh|zatim}}, {{t+|sh|potom}}, {{t+|sh|posle}} {{qualifier|Ekavian}}, {{t+|sh|poslije}} {{qualifier|Ijkavian}}, {{t+|sh|nakon toga}}
 * Sicilian: {{t|scn|poi}}
 * Slovak: {{t|sk|potom}}
 * Slovene: {{t+|sl|potém}}
