t+sh:[[onda]] t+sh:[[dakle]] t+sh:[[u tom slučaju]] ([[WT:EDIT|Assisted]]) <then#50130508>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -281,6 +281,7 @@ From {{etyl|enm|en}} {{m|enm|then|then(ne)}}, {{m|enm|than|than(ne)}}, from {{et
 * Romanian: {{t+|ro|atunci}}, {{t+|ro|apoi}}
 * Russian: {{t+|ru|тогда́}}, {{t|ru|в тако́м слу́чае}}
 * Scottish Gaelic: {{t|gd|ma-thà}}, {{t|gd|a-rèist}}
+* Serbo-Croatian: {{t+|sh|onda}}, {{t+|sh|dakle}}, {{t|sh|u tom slučaju}}
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|alltså}}, {{t+|sv|då}}, {{t+|sv|i så fall}}
 * Tok Pisin: {{t|tpi|orait}}
