--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -30,7 +30,7 @@ From {{inh|en|enm|bageard||marked by a badge}}, from {{m|enm|bage|t=badge}}, ref
 * {{sense|mammal}} {{l|en|cete}}, {{l|en|colony}}
 
 =====Derived terms=====
-{{der3|title=Terms derived from ''badger'' (noun)|American badger ({{taxlink|Taxidea taxus|species|noshow=1}})|European badger (''{{l|mul|Meles meles}}'')|{{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})|{{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})|honey badger ({{taxlink|Mellivora capensis|species|noshow=1}})|stink badger (''[[Mydaus]]'' spp.)|badgerlike|Eurasian badger (''{{l|mul|Meles meles}}'')|badger game|badger dog|sand badger ({{taxlink|Meles leucurus|species|ver=180610}})|Asian badger ({{taxlink|Meles leucurus|species|ver=180610}})|lang=en}}
+{{der3|title=Terms derived from ''badger'' (noun)|American badger ({{taxlink|Taxidea taxus|species|noshow=1}})|European badger (''{{l|mul|Meles meles}}'')|{{vern|ferret-badger}} ({{taxlink|Melogale|genus|noshow=1|ver=161103}})|{{vern|hog badger}} ({{taxlink|Arctonyx collaris|species|noshow=1|ver=161103}})|honey badger (''[[Mellivora capensis]]'')|stink badger (''[[Mydaus]]'' spp.)|badgerlike|Eurasian badger (''{{l|mul|Meles meles}}'')|badger game|badger dog|sand badger ({{taxlink|Meles leucurus|species|ver=180610}})|Asian badger ({{taxlink|Meles leucurus|species|ver=180610}})|lang=en}}
 
 =====Translations=====
 {{trans-top|mammal}}
