--- a/en/d/DWB.741869.wikitext
+++ b/en/d/DWB.741869.wikitext
@@ -2,11 +2,17 @@
 
 ==English==
 
+===Etymology===
+* {{sense|Driving while black}} Coined in analogy to drunk driving's "DWI"
+
 ===Initialism===
 {{rfc-header|Initialism}}
 {{head|en|initialism}}
 
 # [[driving|Driving]] while [[black]] (or [[brown]]), a [[sarcastic]] reference to [[racial profiling]] by police investigating driving offences.
+
+====Related terms====
+* {{l|en|DWI}} {{gloss|driving while intoxicated}}
 
 ----
 
