--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -122,6 +122,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Bulgarian: {{t+|bg|вещ|f|sc=Cyrl}}, {{t+|bg|не́що|n|sc=Cyrl}}
 * Burmese: {{t+|my|အရာ|tr=aja|sc=Mymr}}
 * Catalan: {{t+|ca|cosa|f}}
+* Cebuano: {{t|ceb|butang}}
 * Chichewa: {{t|ny|chinthu}}
 * Chinese:
 *: Cantonese: {{t|yue|嘢|tr=je5}}, {{t|yue|物|tr=mat6}}, {{t|yue|事物|tr=si6 mat6}}
@@ -230,6 +231,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 
 {{trans-top|individual object or distinct entity}}
 * Asturian: {{t|ast|cosa|f}}
+* Cebuano: {{t|ceb|butang}}
 {{trans-mid}}
 * Finnish: {{t+|fi|esine}}
 {{trans-bottom}}
