--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -9,7 +9,7 @@
 ====Translations====
 {{trans-top|any assistance, help or aid}}
 * Catalan: {{t|ca|cop de mà|m}}
-* Finnish: {{t|fi|auttava käsi}}
+* Finnish: {{t|fi|auttava käsi}}, {{t|fi|kolmas käsi}} {{qualifier|tool}}
 * French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
 {{trans-mid}}
 * Icelandic: {{t+|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
