/* Translations */ Added Ancient Greek translation of this word. <division#50148287>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -237,6 +237,7 @@ Borrowed from {{bor|en|fro|division}}, from {{der|en|la|divisio|divisio, divisio
 * Georgian: {{t|ka|დანაყოფი}}, {{t|ka|დივიზია}}
 * German: {{t+|de|Abteilung|f}}, {{t+|de|Division|f}}
 * Greek: {{t+|el|μεραρχία|f}}
+*: Ancient Greek: {{t|grc|ἄγημα|n}}
 * Hebrew: {{t|he|אוגדה|f|tr=ugdá|sc=Hebr}}
 * Icelandic: {{t+|is|herdeild|f}}, {{t+|is|deild|f}}
 * Indonesian: {{t+|id|divisi}}
