====See also==== * {{l|en|indentation}} <indention#50149373>

--- a/en/i/indention.742103.wikitext
+++ b/en/i/indention.742103.wikitext
@@ -4,3 +4,6 @@
 {{en-noun}}
 
 # The act of [[indent]]ing a line of [[text]] by including [[blank]] [[space]] at the beginning
+
+====See also====
+* {{l|en|indentation}}
