t+za:[[doxgaiq]] t+za:[[doenghyiengh]] t-balance ([[WT:EDIT|Assisted]]) <thing#50158832>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -162,8 +162,8 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Korean: {{t+|ko|물건}}, {{t+|ko|것}}
 * Kyrgyz: {{t+|ky|нерсе|sc=Cyrl}}
 * Ladin: {{t|lld|cossa|f}}
-* Ladino: {{t|lad|koza}}
 {{trans-mid}}
+* Ladino: {{t|lad|koza}}
 * Lao: {{t|lo|ສິ່ງ|sc=Laoo}}
 * Latin: {{t+|la|rēs|f}}, {{t+|la|ens|n}}
 * Latvian: {{t|lv|lieta}}
@@ -221,7 +221,7 @@ From {{inh|en|enm|thing}}, from {{inh|en|ang|þing}}, from {{inh|en|gem-pro|*þi
 * Wolof: {{t|wo|këf}}
 * Yagnobi: {{t|yai|чиз}}
 * Yiddish: {{t|yi|זאַך|f}}
-* Zhuang: {{t-needed|za}}
+* Zhuang: {{t|za|doxgaiq}}, {{t|za|doenghyiengh}}
 {{trans-bottom}}
 
 {{trans-top|word, symbol, sign, or other referent that can be used to refer to any entity}}
