--- a/en/j/jump to conclusions.742285.wikitext
+++ b/en/j/jump to conclusions.742285.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{head|en|verb}}
 
-# {{lb|en|idiomatic}} Make [[conclusion]]s before being presented with all the evidence.
+# {{lb|en|idiomatic}} To make [[conclusion]]s before being presented with all the evidence.
 
 ====Translations====
 {{trans-top|make conclusions before being presented with all the evidence}}
