--- a/en/j/jump to conclusions.742285.wikitext
+++ b/en/j/jump to conclusions.742285.wikitext
@@ -10,6 +10,6 @@
 * Chinese:
 *: Mandarin: {{t-needed|cmn}}
 {{trans-mid}}
-* Finnish: {{t-needed|fi}}
+* Finnish: {{t|fi|[[tehdä]] [[hätiköity|hätiköityjä]] [[johtopäätös|johtopäätöksiä]]}}
 * Italian: {{t|it|saltare alle conclusioni}}
 {{trans-bottom}}
