--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -71,6 +71,7 @@ From {{inh|en|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} {{m|fro|mar
 * Norwegian: {{t|no|mår}}
 * Occitan: {{t+|oc|marta}}
 * Ojibwe: {{t|oj|waabizheshi}}, {{t|oj|waabizheshiwag|p}}
+* Old English: {{t|ang|mearþ|m}}
 * Persian: {{t+|fa|سمور|tr=samur}}
 * Polish: {{t+|pl|kuna|f}}
 * Portuguese: {{t+|pt|marta}}
