/* Prepositional phrase */ <at the end of one's tether#50188418>

--- a/en/a/at the end of one's tether.776810.wikitext
+++ b/en/a/at the end of one's tether.776810.wikitext
@@ -6,7 +6,7 @@
 ===Prepositional phrase===
 {{en-PP}}
 
-# {{lb|en|idiomatic}} At the [[limit]] of one’s [[patience]]; [[frustrated]] or [[annoyed]].
+# {{lb|en|idiomatic|UK}} At the [[limit]] of one’s [[patience]]; [[frustrated]] or [[annoyed]].
 
 ====Translations====
 {{trans-top|At the limit of one’s patience}}
