--- a/en/e/EPROM.26249.wikitext
+++ b/en/e/EPROM.26249.wikitext
@@ -4,7 +4,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{lb|en|electronics}} [[erasable|Erasable]] programmable [[read-only memory]].
+# {{lb|en|electronics}} {{initialism of|[[erasable]] [[programmable]] [[read-only memory]]|lang=en}}
 
 ====Related terms====
 * {{l|en|EEPROM}}
