--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -9,7 +9,7 @@
 * {{rhymes|ɪn|lang=en}}
 
 ===Etymology 1===
-From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from {{inh|en|gem-pro|*kinnuz||chin}}, from {{inh|en|ine-pro|*ǵénus||chin, jaw}}. Compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, Danish {{m|da|kind}}, Icelandic {{m|is|kinn}} and Welsh {{m|cy|gen}}, Latin {{m|la|gena}}, Tocharian A {{m|xto|śanwem}}, Ancient Greek {{m|grc|sc=polytonic|γένυς}} 'jaw', Armenian {{m|hy|ծնոտ|sc=Armn}}, Persian {{m|fa|چانه|tr=čâne|sc=fa-Arab}}, Sanskrit {{m|sa|हनु|tr=hánu}}.
+From {{inh|en|enm|chyn}}, from {{inh|en|ang|cin}} or {{m|ang|ċinn||chin}}, from {{inh|en|gem-pro|*kinnuz||chin}}, from {{inh|en|ine-pro|*ǵénus||chin, jaw}}. Compare West Frisian/Dutch {{m|nl|kin}}, Low German/German {{m|de|Kinn}}, {{cog|da|kind}}, {{cog|is|kinn}}, {{cog|cy|gen}}, {{cog|la|gena}}, {{cog|xto|śanwem}}, {{cog|grc|sc=polytonic|γένυς||jaw}}, {{cog|hy|ծնոտ|sc=Armn}}, {{cog|fa|چانه|tr=čâne|sc=fa-Arab}}, {{cog|sa|हनु|tr=hánu}}.
 
 ====Noun====
 {{en-noun}}
