--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -33,11 +33,11 @@ Sense of "group of military officers that assists a commander" and similar meani
 #: {{ux|en|a constable's '''staff'''}}
 #* {{rfdate|and other bibliographic particulars}} {{w|William Shakespeare}}
 #*: Methought this '''staff''', mine office badge in court, / Was broke in twain.
-#* Sir {{w|John Hayward (historian)|John Hayward}} (c.1564-1627)
+#* {{rfdate|and other bibliographic particulars}} Sir {{w|John Hayward (historian)|John Hayward}}
 #*: All his officers brake their '''staves'''; but at their return new '''staves''' were delivered unto them.
 # A pole upon which a [[flag]] is supported and displayed.
 # {{lb|en|archaic}} The [[rung]] of a [[ladder]].
-#* Dr. J. Campbell (E. Brown's Travels)
+#* {{rfdate|and other bibliographic particulars}} Dr. J. Campbell (''E. Brown's Travels'')
 #*: I ascend at one [ladder] of six hundred and thirty-nine '''staves'''.
 # A series of verses so disposed that, when it is concluded, the same order begins again; a stanza; a stave.
 #* {{rfdate|and other bibliographic particulars}} {{w|John Dryden}}
