--- a/en/d/dephasing.774455.wikitext
+++ b/en/d/dephasing.774455.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|eɪzɪŋ|lang=en}}
 
 ===Noun===
-{{en-noun}}
+{{en-noun|~}}
 {{wikipedia}}
 
 # {{lb|en|quantum mechanics|medical imaging}} A loss of the [[synchronization]] or [[coherence]] caused by a [[perturbation]], upon which the system returns to its state before perturbation.
