--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -390,7 +390,7 @@ From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|divisio|divisio, divisionem}}, 
 
 ----
 
-==Middle Englsih==
+==Middle English==
 
 ===Noun===
 {{head|enm|noun}}
